--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,8 +16,8 @@ body {
     #97f2f5,
     #e17aed
   );
-  display: flex;
-  align-content: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 // colors
